feat: first commit project structure

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals", "@eduardo1199/eslint-config"],
+  "rules": {
+    "no-unused-expressions": "off"
+  }
 }
