--- a/package.json
+++ b/package.json
@@ -6,15 +6,46 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "prepare": "husky install",
+    "test": "vitest",
+    "test:observer": "vitest --watch",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "next": "13.4.6",
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.1.1",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.5",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "axios": "^1.4.0",
+    "next": "^13.3.4",
+    "next-auth": "^4.22.1",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
+    "styled-components": "^5.3.11",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.5",
+    "@commitlint/config-conventional": "^17.6.5",
+    "@eduardo1199/eslint-config": "^1.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/node": "^20.3.1",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
+    "@types/styled-components": "^5.1.26",
+    "@vitejs/plugin-react": "^4.0.0",
     "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6"
+    "eslint-config-next": "13.4.6",
+    "husky": "^8.0.0",
+    "jsdom": "^22.1.0",
+    "typescript": "^5.1.3",
+    "vitest": "^0.32.2"
   }
 }
