--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": ["next/core-web-vitals", "@eduardo1199/eslint-config"],
   "rules": {
-    "no-unused-expressions": "off"
+    "no-unused-expressions": "off",
+    "camelcase": "off"
   }
 }
